# hse-secdev-course-project-andriianov

./: .dockerignore  .env.example  .pre-commit-config.yaml  Dockerfile  NFR.md  README.md  SECURITY.md  compose.yaml  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: ci-p11-dast.yml  ci-p12-iac-container.yml  ci-sast-secrets.yml  ci-sbom-sca.yml  ci.yml  deploy.yml
EVIDENCE/P09/: sbom.json  sca_report.json  sca_summary.md
EVIDENCE/P10/: semgrep.sarif
EVIDENCE/P11/: zap_baseline.html  zap_baseline.json
EVIDENCE/P12/: checkov_report.json  hadolint_report.json  trivy_report.json
app/: auth.py  database.py  exceptions.py  main.py  models.py  routes.py
app/schemas/: validation.py
docs/: NFR_BDD.md  NFR_TRACEABILITY.md
docs/adr/: ADR-001-ErrorsFormatRFC7807.MD  ADR-002-NormalizationOfDatesAndCurrencies.md  ADR-003-Secrets.md
docs/adr/alternatives/: Alternative-for-ADR-001.md  Alternative-for-ADR-002.md
docs/adr/consequences/: DoD.md
docs/adr/rollout-plan/: Rollout.md
docs/adr/security-impact/: SecurityImpact.md
docs/threat-model/: DFD.md  RISKS.md  STRIDE.md
policy/: waivers.yml
src/app/: auth.py  exceptions.py  main.py  models.py  routes.py
src/app/schemas/: problem.py  validation.py
tests/: conftest.py  test_datetime_money.py  test_errors.py  test_errors_handling.py  test_metrics.py  test_normalize_input.py  test_rfc7807_errors.py  test_secrets.py  test_secrets_and_logs.py
