[tool.ruff]
line-length = 100
select = ["E","F","W"]
target-version = "py311"
exclude = ["venv",".venv","build","dist"]

[tool.isort]
profile = "black"
line_length = 100

[tool.black]
line-length = 100

[tool.pytest.ini_options]
asyncio_mode = "auto"

[build-system]
requires = ["setuptools>=65.5", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
include = ["app*"]

[project]
name = "hse-secdev-course-project-andriianov"
version = "0.1.0"
